Editor/src/main/scala/code/snippet/log/log_compilation_Fri_Apr_15_00:53:08_CEST_2011
[Classpath = /usr/lib/jvm/java-6-sun-1.6.0.24/jre/lib/resources.jar:/usr/lib/jvm/java-6-sun-1.6.0.24/jre/lib/rt.jar:/usr/lib/jvm/java-6-sun-1.6.0.24/jre/lib/jsse.jar:/usr/lib/jvm/java-6-sun-1.6.0.24/jre/lib/jce.jar:/usr/lib/jvm/java-6-sun-1.6.0.24/jre/lib/charsets.jar:/usr/share/java/scala-library.jar:/usr/share/java/scala-compiler.jar:/usr/lib/jvm/java-6-sun-1.6.0.24/jre/lib/ext/localedata.jar:/usr/lib/jvm/java-6-sun-1.6.0.24/jre/lib/ext/dnsns.jar:/usr/lib/jvm/java-6-sun-1.6.0.24/jre/lib/ext/sunpkcs11.jar:/usr/lib/jvm/java-6-sun-1.6.0.24/jre/lib/ext/sunjce_provider.jar:.]
[loaded package loader resources.jar in 1393ms]
[loaded package loader java in 1ms]
[loaded package loader lang in 17ms]
[loaded package loader reflect in 15ms]
[loaded class file /usr/share/java/scala-library.jar(scala/package.class) in 107ms]
[loaded package loader scala in 342ms]
[loaded package loader runtime in 15ms]
[loaded class file /usr/lib/jvm/java-6-sun-1.6.0.24/jre/lib/rt.jar(java/lang/Object.class) in 14ms]
[loaded package loader io in 8ms]
[loaded package loader util in 18ms]
[loaded package loader nio in 5ms]
[loaded package loader charset in 1ms]
[loaded class file /usr/lib/jvm/java-6-sun-1.6.0.24/jre/lib/rt.jar(java/lang/String.class) in 71ms]
[loaded class file /usr/share/java/scala-library.jar(scala/collection/package.class) in 6ms]
[loaded package loader collection in 61ms]
[dropping dependency on node with no phase object: msil]
[promote the dependency of explicitouter: tailcalls => specialize]
[parsing HelloWrong.scala]
[parser in 36ms]
[loaded package loader annotation in 1ms]
[loaded class file /usr/share/java/scala-library.jar(scala/Predef.class) in 20ms]
[namer in 36ms]
[packageobjects in 0ms]
[loaded class file /usr/share/java/scala-library.jar(scala/ScalaObject.class) in 2ms]
[loaded class file /usr/share/java/scala-library.jar(scala/ClassfileAnnotation.class) in 2ms]
[loaded class file /usr/share/java/scala-library.jar(scala/Annotation.class) in 3ms]
[loaded class file /usr/share/java/scala-library.jar(scala/StaticAnnotation.class) in 3ms]
[loaded package loader immutable in 29ms]
[loaded class file /usr/share/java/scala-library.jar(scala/collection/immutable/List.class) in 21ms]
[loaded class file /usr/share/java/scala-library.jar(scala/collection/generic/package.class) in 3ms]
[loaded package loader generic in 14ms]
[loaded class file /usr/share/java/scala-library.jar(scala/collection/generic/SeqFactory.class) in 6ms]
[loaded class file /usr/share/java/scala-library.jar(scala/collection/generic/TraversableFactory.class) in 5ms]
[loaded class file /usr/share/java/scala-library.jar(scala/collection/generic/GenericCompanion.class) in 3ms]
[loaded class file /usr/share/java/scala-library.jar(scala/Array.class) in 15ms]
[loaded class file /usr/share/java/scala-library.jar(scala/LowPriorityImplicits.class) in 4ms]
HelloWrong.scala:5: error: not found: value prin
      prin tln("Hello, world!")
      ^
[typer in 198ms]
[total in 274ms]
one error found
